--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,15 @@
 @tailwind components;
 
 @tailwind utilities;
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: #e6e6e6;
+}
+
+body {
+  min-height: 100vh;
+}
