--- a/src/styles/radiobutton.css
+++ b/src/styles/radiobutton.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   color: var(--font-grey-27-a-7-a-7-a, #7a7a7a);
-  font-family: Poppins;
+  font-family: 'Inter', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
