--- a/src/styles/radiogroup.css
+++ b/src/styles/radiogroup.css
@@ -1,6 +1,6 @@
 .radio-group-heading {
   color: var(--font-dark-212121, #212121);
-  font-family: Poppins;
+  font-family: 'Inter', sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
